fix layout bug

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -106,6 +106,7 @@ nav {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 .logo {
